lx/test/fixtures/parser/valid/loop-control.lx
// Valid loop control flow

// Break at end of loop block
for true {
  let x = 1
  break
}

// Continue at end of loop block
for let i = 0; i < 10; i = i + 1 {
  continue
}

// Nested loops with break/continue
for true {
  for true {
    break
  }
  continue
}
