lx/test/fixtures/parser/invalid/break-not-at-end.lx
// Invalid: break not at end of block
for true {
  break 1
  let x = 2
}
